# pg-db-idle-agent

./: Cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: main.rs
pg-db-idle-agent/: Cargo.toml
pg-db-idle-agent/src/: lib.rs  pg_db_agent_params.rs
src/: lib.rs  main.rs
