[package]
name = "pg-db-idle-agent"
version = "0.0.2"
edition = "2021"
description = "The PgDbIdleAgent is a customizable, asynchronous agent in Rust that periodically queries a PostgreSQL database and processes the results using a user-defined function."
license = "MIT"
keywords = ["agent","runner","worker","postgres","database"]
repository = "https://github.com/nikola-bozin-org/pg-db-idle-agent"
readme = "README.md"

[dependencies]



[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1